--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,4 @@
-[build-system]
-requires = ["setuptools>=45", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "pygico-imagegen"
 authors = [{name = "Your Name", email = "your.email@example.com"}]
 description = "Python, GIMP, and ComfyUI based image generation and text addition tool"
@@ -15,10 +11,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dynamic = ["version", "dependencies"]
-
-[tool.setuptools.dynamic]
-version = {attr = "pygico_imagegen.__version__"}
-dependencies = {file = ["requirements.txt"]}
+version = "0.1.0"
 
 [project.optional-dependencies]
 dev = [
@@ -30,6 +23,11 @@ dev = [
     "sphinx",
     "sphinx-rtd-theme",
 ]
+
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
 
 [project.scripts]
 pygico-imagegen = "pygico_imagegen.cli:main"
