--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.poetry]
 name = "pygico-imagegen"
-version = "0.1.0"
+version = "0.1.1"
 description = "Python, GIMP, and ComfyUI based image generation and text addition tool"
 authors = ["Your Name <your.email@example.com>"]
 license = "MIT"
@@ -12,23 +12,25 @@ readme = "README.md"
 packages = [{include = "pygico_imagegen"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-click = "*"
-pillow = "*"
-requests = "*"
-python-dotenv = "*"
-loguru = "*"
-litellm = "*"
-pydantic-settings = "*"
+python = "^3.9"
+pygimp-labs = "^0.2.1"
+pillow = "^10.4.0"
+requests = "^2.32.3"
+python-dotenv = "^1.0.1"
+loguru = "^0.7.2"
+litellm = "^1.41.25"
+pydantic-settings = "^2.3.4"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "*"
-black = "*"
-isort = "*"
-mypy = "*"
-flake8 = "*"
-sphinx = "*"
-sphinx-rtd-theme = "*"
+python = "^3.8"
+pygimp-labs = {path = "C:/Prj/PyGIMP", develop = true}
+pytest = "^8.2.2"
+black = "^24.4.2"
+isort = "^5.13.2"
+mypy = "^1.11.0"
+flake8 = "^7.1.0"
+sphinx = "^7.4.6"
+sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.scripts]
 pygico-imagegen = "pygico_imagegen.cli:main"
