--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,14 @@
 requires = ["setuptools>=45", "wheel", "poetry-core>=1.0.0"]
 build-backend = "setuptools.build_meta"
 
-[tool.poetry]
+[project]
 name = "pygico-imagegen"
-version = "0.1.2"
+version = "0.1.3"
 description = "Python, GIMP, and ComfyUI based image generation and text addition tool"
-authors = ["Maki <sunwood.ai.labs@gmail.com>"]
-license = "MIT"
+authors = [{name = "Your Name", email = "your.email@example.com"}]
+requires-python = ">=3.8.1"
+license = {text = "MIT"}
 readme = "README.md"
-packages = [{include = "pygico_imagegen"}]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -20,6 +20,19 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
 ]
+dependencies = [
+    "pygimp-labs>=0.2.1,<0.3.0",
+    "pillow>=10.4.0,<11.0.0",
+    "requests>=2.32.3,<3.0.0",
+    "python-dotenv>=1.0.1,<2.0.0",
+    "loguru>=0.7.2,<0.8.0",
+    "litellm>=1.41.25,<2.0.0",
+    "pydantic-settings>=2.3.4,<3.0.0",
+]
+
+[tool.poetry]
+# Poetry will use the [project] section for most metadata
+packages = [{include = "pygico_imagegen"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
