🔧 fix: スクリプト設定の修正
- `input_image`を`Hello PyGiCo.temp.png`に変更しました。
- `output_path`を`output1.png`に修正しました。
- テキストを`Hello PyGiCo`に更新しました。

--- a/example/gimp_script_config.json
+++ b/example/gimp_script_config.json
@@ -1,9 +1,9 @@
 {
   "arguments": {
     "font_size": "78",
-    "input_image": "final_image.png.temp.png",
-    "output_path": "final_image.png",
-    "text": "サンプルテキスト"
+    "input_image": "Hello PyGiCo.temp.png",
+    "output_path": "output1.png",
+    "text": "Hello PyGiCo"
   },
   "script_path": "gimp_script_template.py"
 }
